--- a/style.css
+++ b/style.css
@@ -10,3 +10,134 @@ License URI: http://www.gnu.org/license/gpl-2.0.html
 Tags: CSS Grid, Flexbox, moble first, gym theme
 Text Domain: gymfitness
 */
+
+:root {
+    /** fonts **/
+    --mainFont : 'Staatliches', cursive;
+    --textFont: 'Open Sans', sans-serif;
+    --secondaryFont: 'Raleway', sans-serif;
+
+    /** COLORS **/
+
+    --primary: #ff5b00;
+    --darkGray: #2f2e2e;
+    --lightGray: #ebebeb;
+    --white: #fff;
+    --black: #000;
+}
+
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+body {
+    font-family: var(--secondaryFont);
+    font-size: 1.6rem;
+    line-height: 2;
+}
+
+/** HEADINGS **/
+h1, h2, h3 {
+    font-family: var(--mainFont);
+    margin: 5rem 0;
+    line-height: 1.2rem;
+}
+
+h1 {
+    font-size: 6rem;
+}
+
+h2{
+    font-size: 4.8rem;
+    color: var(--primary);
+}
+
+h3 {
+    font-size: 3.6rem;
+}
+
+
+
+/** GLOBALS **/
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.container {
+    max-width: 120rem;
+    width: 95%;
+    margin: 0 auto;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+/** UTILITIES **/
+
+/** header **/
+
+.logo {
+    display: flex;
+    justify-content: center;
+}
+
+.site-header {
+    background-color: var(--darkGray);
+    padding: 2rem 0;
+}
+
+@media (min-width: 768px) {
+    .navigation-bar {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+/** Main menu **/
+.main-menu {
+    display: none;
+}
+
+@media (min-width: 768px) {
+    .main-menu {
+        display: flex;
+    }
+
+    .main-menu .menu {
+        display: flex;
+        align-items: center;
+    }
+
+    .main-menu li {
+        margin-right: 2rem;
+    }
+    .main-menu li:last-of-type {
+        margin-right: 0;
+    }
+
+
+}
+
+.main-menu a {
+    color: var(--white);
+    font-size: 2.2rem;
+    font-family: var(--mainFont);
+    padding: .5rem 2rem;
+}
+
+.main-menu .current_page_item {
+    border-bottom: 3px solid var(--primary);
+}
