--- a/style.css
+++ b/style.css
@@ -141,6 +141,34 @@ img {
 .main-menu .current_page_item {
     border-bottom: 3px solid var(--primary);
 }
+/** Mobile Menu **/
+@media (min-width: 768px) {
+    .slicknav_menu {
+        display: none;
+    }
+}
+
+.slicknav_menu {
+    background-color: var(--darkGray);
+}
+
+.slicknav_btn {
+    background-color: var(--primary);
+}
+
+.slicknav_nav a {
+    font-size: 2.4rem;
+    text-align: center;
+    font-family: var(--mainFont);
+
+}
+
+.slicknav_nav a:hover {
+    background: transparent;
+    color: var(--primary);
+}
+
+
 
 /** Footer **/
 
