--- a/style.css
+++ b/style.css
@@ -87,6 +87,20 @@ img {
 
 /** UTILITIES **/
 
+.text-center {
+    text-align: center;
+}
+
+.text-primary {
+    color: var(--primary);
+}
+
+.section {
+    padding: 5rem 0;
+}
+
+
+
 /** header **/
 
 .logo {
@@ -221,4 +235,16 @@ img {
     }
 }
 
+/** Page Template **/
+.featured-image {
+    margin-bottom: 3rem;
+}
 
+.page h1 {
+    margin-bottom: 4rem;
+}
+
+.page.no-sidebars {
+    max-width: 80rem;
+    margin: 0 auto;
+}
