Added more style to the classes single page

--- a/style.css
+++ b/style.css
@@ -348,3 +348,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
     font-weight: 700;
 }
 
+/** Single Class **/
+p.content-class {
+    font-weight: 700;
+    font-family: var(--secondaryFont);
+    font-size: 2.2rem;
+    text-align: center;
+}
