--- a/style.css
+++ b/style.css
@@ -498,3 +498,57 @@ p.content-class {
 h3.blog-page-title {
     line-height: 4rem;
 }
+
+/** Contact Form **/
+.wpcf7-form p {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wpcf7-form p span {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.wpcf7-form p span,
+.wpcf7-form p label {
+    flex: 0 0 100%;
+}
+
+.wpcf7-form-control {
+    flex: 0 0 100%;
+    border: 1px solid var(--lightGray);
+    padding: 1rem;
+}
+
+.wpcf7-submit {
+    background-color: var(--primary);
+    font-size: 2rem;
+    font-family: var(--mainFont);
+    color: var(--white);
+    padding: 1.2rem;
+    
+}
+
+.wpcf7-submit:hover {
+    cursor: pointer;
+}
+
+.wpcf7-response-output {
+    background-color: red;
+    color: var(--white);
+    border: none;
+    text-align: center;
+}
+
+div.wpcf7 .ajax-loader {
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 4rem;
+    width: 4rem;
+}
+
+span.wpcf7-not-valid-tip {
+    background-color: #f00;
+    color: var(--white);
+}
