Fixed style error

--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body.home .site-header {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(5, 1fr);
-
+    }
 }
 
 /** Main menu **/
