--- a/style.css
+++ b/style.css
@@ -61,11 +61,10 @@ h3 {
     font-size: 3.6rem;
 }
 
-
-
 /** GLOBALS **/
 a {
     text-decoration: none;
+    font-family: var(--secondaryFont);
 }
 
 ul {
@@ -99,7 +98,33 @@ img {
     padding: 5rem 0;
 }
 
+/** Buttons**/
 
+.button-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button {
+    display: block;
+    background-color: var(--primary);
+    flex: 1;
+    text-align: center;
+    color: var(--white);
+    border-radius: .5rem;
+    padding: 1rem 3rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 2rem;
+    
+}
+
+@media (min-width: 768px) {
+    .button {
+        display: inline-block;
+        flex: 0 0 auto;
+    }
+}
 
 /** header **/
 
@@ -658,3 +683,4 @@ span.wpcf7-not-valid-tip {
     height: 350px;
     object-fit: cover;
 }
+
