--- a/style.css
+++ b/style.css
@@ -145,6 +145,23 @@ img {
     .navigation-bar {
         display: flex;
         justify-content: space-between;
+        transition: all 0.3s ease;
+    }
+
+
+    .fixed-top {
+        position: fixed;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background-color: var(--darkGray);
+        z-index: 10000;
+        padding: 1rem 5rem;
+        
+    }
+
+    .fixed-top img {
+        width: 12rem;
     }
 }
 
@@ -216,6 +233,13 @@ body.home .site-header {
     font-size: 2.2rem;
     font-family: var(--mainFont);
     padding: .5rem 2rem;
+}
+
+@media (min-width: 768px) {
+    .main-menu a {
+        font-size: 2rem;
+        padding: .5rem 1rem;
+}
 }
 
 .main-menu .current_page_item {
